# cassie

./: .gitignore  LICENSE  README.md  build.sh  cabal.project  cassie.code-workspace  deno.json  deno_server.js  deno_server.ts  index.html  package-lock.json  package.json  tsconfig.json  wasm32-wasi-cassie-stubfile.js
cassie/: CHANGELOG.md  cassie.cabal
cassie-cli/: cassie-cli.cabal
cassie-cli/cli/: Main.hs
cassie-cli/reactor/: Glue.hs  JSBindings.hs  JSFileSystem.hs  JSFileSystemIF.hs  JSHelper.hs  Main.hs  NodeIO.hs
cassie-cli/src/CassieCLI/: Init.hs  Internal.hs  Module.hs  MonadLookup.hs  MonadVirtFS.hs  MonadVirtGetLine.hs  MonadVirtIO.hs  Parser.hs  Repl.hs  Solve.hs  Utils.hs
cassie-cli/src/CassieCLI/Module/: Internal.hs
cassie-cli/src/CassieCLI/Parser/: Internal.hs  Lang.hs  Lexemes.hs  ParsedTypes.hs
cassie-cli/src/CassieCLI/Solve/: Formatting.hs  Internal.hs  Settings.hs
cassie-cli/src/CassieCLI/Solve/Formatting/: Web.hs
cassie-cli/web/: Main.hs
cassie-framework/: cassie-framework.cabal
cassie-framework/src/Data/Cassie/: Rules.hs  Structures.hs
cassie-framework/src/Data/Cassie/Rules/: Evaluate.hs  Substitute.hs
cassie-hs/: CHANGELOG.md  cassie-hs.cabal  system.cas
cassie-hs/app/: Main.hs  Settings.hs
cassie-hs/src/Data/: Cassie.hs
cassie-hs/src/Data/Cassie/: Evaluate.hs  Internal.hs  Isolate.hs  Parser.hs  Solver.hs  Structures.hs  Substitute.hs  Utils.hs
cassie-hs/src/Data/Cassie/Isolate/: PolySolve.hs
cassie-hs/src/Data/Cassie/Parser/: Internal.hs  Lang.hs
cassie-hs/src/Data/Cassie/Rules/: Evaluate.hs  Isolate.hs  Substitute.hs
cassie-hs/src/Data/Cassie/Rules/Isolate/: PolySolve.hs
cassie-hs/src/Data/Cassie/Solver/: Context.hs  EqSolve.hs  Imports.hs  Internal.hs
cassie-hs/src/Data/Cassie/Structures/: Internal.hs  Magmas.hs  ShowStructure.hs  UnarySystems.hs
cassie-hs/src/Data/Cassie/Structures/Instances/: Complex.hs  Real.hs
cassie-js/: package-lock.json  package.json
cassie-js/src/: cassie.ts  common.ts  main.ts
cassie-js/src/wasi/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js
cassie-wasm/: CHANGELOG.md  cassie-wasm.cabal
cassie-wasm/app/: Main.hs  Settings.hs  WasmBindings.hs
cassie-wasm/src/: Glue.hs
cassie-web/: tsconfig.json
cassie/cli/: Formatting.hs  Init.hs  Internal.hs  Main.hs  Repl.hs  Settings.hs  Solve.hs
cassie/cli/Solve/: Formatting.hs  Internal.hs  Settings.hs
cassie/reactor/: Main.hs
cassie/src/Data/: Cassie.hs
cassie/src/Data/Cassie/: CLI.hs  Rules.hs  Solver.hs  Structures.hs  Utils.hs
cassie/src/Data/Cassie/CLI/: Module.hs  MonadLookup.hs  Parser.hs  Utils.hs
cassie/src/Data/Cassie/CLI/Module/: Internal.hs
cassie/src/Data/Cassie/CLI/Parser/: Internal.hs  Lang.hs  Lexemes.hs  ParsedTypes.hs
cassie/src/Data/Cassie/Rules/: Evaluate.hs  Isolate.hs  Substitute.hs
cassie/src/Data/Cassie/Rules/Isolate/: PolySolve.hs
cassie/src/Data/Cassie/Solver/: CtxEval.hs  Internal.hs  System.hs
cassie/src/Data/Cassie/Structures/: Internal.hs  Magmas.hs  Polynomial.hs  ShowStructure.hs
cassie/src/Data/Cassie/Structures/Instances/: Boolean.hs  Linalg.hs  Real.hs
cassie/src/Numeric/: Matrix.hs
cassie/src/Numeric/Matrix/: Internal.hs  LU.hs
cassie2-hs/: CHANGELOG.md  cassie2-hs.cabal
cassie2-hs/src/: Cassie.hs
cassie2-hs/src/Cassie/: Internal.hs  Structures.hs
cassie2-hs/src/Cassie/Structures/: BinaryOps.hs  CommutativeSemigroup.hs  Elements.hs  Internal.hs
docs/: docs.html  index.html  playground.html
docs/public/: article-style.css  index.js  outputRendering.js  playground-style.css  style.css
docs/public/wasm/: cassie-wasm.wasm  ghc_wasm_jsffi.js  wasm_wrapper.js  web.wasm
public/: domElements.js  index.html  index.js  outputRendering.js  style.css
public/assets/fonts/: info.txt
public/wasm/: cassie-wasm.wasm  ghc_wasm_jsffi.js  wasm_wrapper.js
root/: index.html
root/public/: domElements.js
root/public/style/: firacode.css  quick-fill.css  style.css  title.css
src/: cassieWrapper.ts  main.ts  nodeJsStubs.ts
src/wasi/: ghc_wasm_jsffi.d.ts  ghc_wasm_jsffi.js
