cabal-version:      3.0
name:               cassie-framework
version:            0.1.0.0
synopsis:           A simple, homebrewed CAS library
-- description:
license:            MIT
license-file:       LICENSE
author:             Grant
maintainer:         christiansengrant18@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
