cabal-version:      3.0
name:               cassie-hs
version:            0.1.0.0
synopsis:           A simple home-brewed CAS
-- description:
license:            MIT
license-file:       LICENSE
author:             Grant
maintainer:         christiansengrant18@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Data.Cassie.Parser,
                        Data.Cassie.PolySolve,
                        Data.Cassie.Evaluate,
                        Data.Cassie.Internal,
                        Data.Cassie.Isolate,
                        Data.Cassie.Structures,
                        Data.Cassie.Substitute,
                        Data.Cassie,
    -- other-modules:
    -- other-extensions:
    -- Build uses GHC 9.2.8 by default, use up to 4.21.0.0 to satisfy experimental WASM backend
    build-depends:      base        >= 4.16.4.0 && <= 4.21.0.0, 
                        containers  >= 0.6.5.1,
                        mtl         >= 2.2.2,
                        parsec      >= 3.1.18.0,
                        text        >= 1.2.5.0,
    hs-source-dirs:     src
    default-language:   Haskell2010
