cabal-version:      3.0
name:               cassie-hs
version:            0.1.0.0
synopsis:           A simple home-brewed CAS
-- description:
license:            MIT
license-file:       LICENSE
author:             Grant
maintainer:         christiansengrant18@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cassie-cli
    import:             warnings
    main-is:            Main.hs
    other-modules:      Settings
    build-depends:      
                        base               ^>= 4.21.0.0,
                        aeson               >= 2.2.3.0,
                        cassie-hs           >= 0.1.0.0,
                        containers          >= 0.6.5.1,
                        mtl                 >= 2.3.1,
                        text                >= 1.2.5.0,
    hs-source-dirs:     app
    default-language:   Haskell2010

library
    import:             warnings
    
    exposed-modules:    Data.Cassie.Parser,
                        Data.Cassie.Rules,
                        Data.Cassie.Solver,
                        Data.Cassie.Structures,                  
                        Data.Cassie.Utils,
                        Data.Cassie,

    other-modules:      Data.Cassie.Rules.Evaluate,
                        Data.Cassie.Rules.Isolate,
                        -- Data.Cassie.Rules.Isolate.PolySolve,
                        Data.Cassie.Rules.Substitute,
                        Data.Cassie.Parser.Internal,
                        Data.Cassie.Parser.Lang,
                        Data.Cassie.Solver.Context,
                        Data.Cassie.Solver.EqSolve,
                        Data.Cassie.Solver.Imports,
                        Data.Cassie.Solver.Internal,
                        Data.Cassie.Structures.Internal,
                        Data.Cassie.Structures.Instances.Complex,
                        Data.Cassie.Structures.Instances.Real,
                        Data.Cassie.Structures.Magmas,
                        Data.Cassie.Structures.UnarySystems,
                        Data.Cassie.Structures.ShowStructure,
    -- other-extensions:
    -- Build uses GHC 9.2.8 by default, use up to 4.21.0.0 to satisfy experimental WASM backend
    build-depends:      base        >= 4.16.4.0 && <= 4.21.0.0, 
                        containers  >= 0.6.5.1,
                        directory   >= 1.3.9.0,
                        mtl         >= 2.2.2,
                        parsec      >= 3.1.18.0,
                        text        >= 1.2.5.0,
    hs-source-dirs:     src
    default-language:   Haskell2010
