cabal-version:      3.0
name:               cassie-wasm
version:            0.1.0.0
synopsis:           A simple home-brewed CAS... for the web!
-- description:
license:            MIT
license-file:       LICENSE
author:             Grant
maintainer:         christiansengrant18@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable cassie
    import:             warnings
    main-is:            Main.hs
    other-modules:      Settings
    build-depends:      
                        base               ^>= 4.21.0.0,
                        aeson               >= 2.2.3.0,
                        cassie-hs           >= 0.1.0.0,
                        containers          >= 0.6.5.1,
                        mtl                 >= 2.3.1,
                        text                >= 1.2.5.0,
    hs-source-dirs:     app
    default-language:   Haskell2010

executable cassie-wasm
    import:             warnings
    ghc-options:        -no-hs-main -optl-Wl,--export=solveSystemHs -optl-mexec-model=reactor
    main-is:            WasmBindings.hs
    -- other-modules:
    -- other-extensions:
    build-depends:      base               ^>= 4.21.0.0,
                        aeson               >= 2.2.3.0,
                        cassie-hs           >= 0.1.0.0,
                        cassie-wasm         >= 0.1.0.0,
                        containers          >= 0.6.5.1,
                        ghc-experimental    >= 9.1202.0,
                        text                >= 1.2.5.0,
    hs-source-dirs:     reactor
    default-language:   Haskell2010

library
    import:             warnings
    exposed-modules:    Glue
    -- other-modules:
    -- other-extensions:
    -- Build uses GHC 9.2.8 by default, use up to 4.21.0.0 to satisfy experimental WASM backend
    build-depends:      base               ^>= 4.21.0.0,
                        aeson               >= 2.2.3.0,
                        cassie-hs           >= 0.1.0.0,
                        containers          >= 0.6.5.1,
                        ghc-experimental    >= 9.1202.0,
                        text                >= 1.2.5.0,
    hs-source-dirs:     src
    default-language:   Haskell2010