cabal-version:          3.0
name:                   cassie
version:                0.1.0.0
synopsis:               A simple, homebrewed CAS library
-- description:
license:                MIT
license-file:           ../LICENSE
author:                 Grant
maintainer:             christiansengrant18@gmail.com
-- copyright:
category:               Math
build-type:             Simple
extra-doc-files:        CHANGELOG.md

common warnings
    ghc-options:        -Wall

library
    import:             warnings
    exposed-modules:    Data.Cassie,
                        Data.Cassie.Rules,
                        Data.Cassie.Solver,
                        Data.Cassie.Structures,
    other-modules:      Data.Cassie.Rules.Evaluate,
                        Data.Cassie.Rules.Isolate,
                        Data.Cassie.Rules.Isolate.PolySolve,
                        Data.Cassie.Rules.Substitute,
                        Data.Cassie.Solver.Internal,
                        Data.Cassie.Solver.System,
                        Data.Cassie.Structures.Instances.Complex,
                        Data.Cassie.Structures.Instances.Real,
                        Data.Cassie.Structures.Internal,
                        Data.Cassie.Structures.Magmas,
                        Data.Cassie.Structures.ShowStructure,
                        Data.Cassie.Structures.UnarySystems,
                        Data.Cassie.Utils
    build-depends:      base        >= 4.16.4.0 && <= 4.21.0.0, 
                        containers  >= 0.6.5.1,
                        mtl         >= 2.2.2,
                        text        >= 2.1.2,
    hs-source-dirs:     src
    default-language:   Haskell2010
