cabal-version:      3.0
name:               cassie2-hs
version:            0.1.0.0
synopsis:           A simple, home-brewed CAS
-- description:
license:            MIT
license-file:       LICENSE
author:             Grant
maintainer:         christiansengrant18@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:             warnings
    exposed-modules:    Cassie
                        Cassie.Structures
                        Cassie.Structures.CommutativeSemigroup
                        Cassie.Structures.Elements
                        Cassie.Structures.Internal
                        Cassie.Structures.BinaryOps
    -- other-modules:  
    -- other-extensions:
    build-depends:      base        >= 4.16.4.0 && <= 4.21.0.0, 
                        containers  >= 0.6.5.1,
                        mtl         >= 2.2.2,
                        parsec      >= 3.1.18.0,
                        text        >= 1.2.5.0,
    hs-source-dirs:     src
    default-language:   Haskell2010

test-suite cassie2-hs-test
    import:             warnings
    default-language:   Haskell2010
    -- other-modules:
    -- other-extensions:
    type:               exitcode-stdio-1.0
    hs-source-dirs:     test
    main-is:            Main.hs
    build-depends:      base ^>=4.21.0.0,
                        cassie2-hs
